# endroid

./: .gitignore  Makefile  README.md  build.gradle
app/: build.gradle
java/: local.properties
java/app/src/main/: AndroidManifest.xml
java/app/src/main/java/local/walkers/: MainActivity.java
java/lib/: Cargo.toml
java/lib/src/: lib.rs
rust/: Cargo.toml
rust/src/: lib.rs
