[package]
name = "endroid"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
android_logger = "0.14"
eframe = { version = "0.29", features = ["wgpu", "android-game-activity"] }
egui-winit = "0.29"
ndk-context = "0.1"
jni = "0.21"
thiserror = "2.0.3"
arboard = { git = "https://github.com/podusowski/arboard.git", branch = "android" }

[lib]
name = "main"
crate-type = ["cdylib"]
